Updating contact form test case

--- a/Configurations/config.ini
+++ b/Configurations/config.ini
@@ -2,3 +2,4 @@
 base_url= https://automationexercise.com/
 email= harivenkatakrishnan7899@gmail.com
 password= #Password123
+upload_path= C:\Users\91638\PycharmProjects\Hybrid framework\Screenshots\test_dltuser_22-04-2025_18-38-34-096044.png
